Tue Jun 26 23:00:04 2001  Trevor Curtis <trevor.curtis@home.com>

	* docs/gdmconfig/C: added sections for Miscellaneous, and Login 
	  Sessions. Updated XServer-Setup section. 
	* docs/gdmconfig/C/figures/*: updated GDM_xserv_setup.png, and 
	  GDM_login_sessions.png. Added GDM_expert_misc.png

Mon Jun 25 02:43:19 2001  George Lebl <jirka@5z.com>

	* configure.in: remove the POTFILES sed rule as that makes autogen.sh
	  whack out

Mon Jun 25 01:10:04 2001  George Lebl <jirka@5z.com>

	* gui/gdmphotosetup.c, daemon/slave.c: Get a picture from the config
	  file.  when the picture is in a known pixmap directory, don't
	  check it since it's a system file.  Makes it possible to select
	  larger system files which will be then scaled down, but the user
	  can't point it to a malicious picture.

Sun Jun 24 23:53:34 EDT 2001 Trevor Curtis <trevor.curtis@home.com>

	* edited gdmconfig.sgml to make editing it a little easier.

Sun Jun 24 14:55:29 2001  George Lebl <jirka@5z.com>

	* config/gdm.conf.in, daemon/gdm.[ch], daemon/slave.c,
	  gui/gdmconfig.(c|glade):  Add daemon/AlwaysRestartServer option
	  so that the slave can just kill and restart the server instead
	  of reinitting it.

	* docs/C/gdm.sgml: update for all the new options

Sun Jun 24 14:07:47 2001  George Lebl <jirka@5z.com>

	* daemon/slave.c: when ping times out, do proper session stoping
	  first rather then just a straight kill

Sun Jun 24 13:45:59 2001  George Lebl <jirka@5z.com>

	* config/gdm.conf.in, daemon/gdm.[ch], daemon/slave.c,
	  gui/gdmconfig.(c|glade), gui/gdmlogin.c:  Add suspend command
	  support although it is off by default (empty command)  Also do
	  checks for commands and don't show their respective menu items
	  if the commands are not present or empty

	* config/gdm.conf.in, daemon/gdm.[ch], daemon/slave.c,
	  daemon/verify-pam.c, daemon/xdmcp.c, gui/gdmconfig.(c|glade),
	  gui/gdmlogin.c:  Apply and massage a patch from Michel Dagenais