@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/bin/sh
 
 for errfile in "$HOME/.gnomerc-errors" "${TMPDIR-/tmp}/gnomerc-$USER" "/tmp/gnomerc-$USER"
 do
