@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/bin/sh
 # $XConsortium: Xsession /main/10 1995/12/18 18:21:28 gildea $
 
 case $# in
