@@ -1,3 +1,11 @@
+Thu Jun 28 13:44:40 2001  George Lebl <jirka@5z.com>
+
+	* config/Gnome.in, config/Xsession.in: use /bin/sh and not /bin/bash
+
+	* gui/gdmconfig.c: fix crash when reading long session files
+
+	* daemon/slave.c: s/editting/editing/
+
 Tue Jun 26 23:00:04 2001  Trevor Curtis <trevor.curtis@home.com>
 
 	* docs/gdmconfig/C: added sections for Miscellaneous, and Login 
